package site.ftka;

public abstract class Inversion {
	public abstract double getValorActual();
}
